# Error-Question-AI-Assistant

./: .gitignore  .pre-commit-config.yaml  README.md
.specify/: feature.json
backend/: .env.example  pyproject.toml
backend/app/: deps.py  errors.py  main.py
backend/app/api/: auth.py  mistakes.py  notes.py  uploads.py
backend/app/core/: __init__.py  auth_jwt.py  ocr_client.py  settings.py  supabase.py  wechat.py
backend/app/schemas/: auth.py  classify.py  mistakes.py  notes.py  uploads.py
backend/app/services/: __init__.py  auth.py  classifier.py  ingestion.py  mistakes.py  notes.py  ocr.py  pdf.py  tag_normalizer.py  uploads.py
backend/tests/: test_deps.py  test_healthz.py  test_rls.py  test_tooling.py
backend/tests/api/: test_auth_api.py  test_mistakes_create_api.py  test_mistakes_ingest_api.py  test_notes_create_api.py  test_notes_crud_api.py  test_notes_ingest_api.py  test_uploads_api.py
backend/tests/contracts/: __init__.py  test_auth_contract.py  test_mistake_create_contract.py  test_mistakes_ingest_contract.py  test_notes_contract.py  test_upload_contract.py
backend/tests/core/: test_auth_jwt.py  test_settings.py  test_supabase_client.py  test_supabase_client_boundaries.py
backend/tests/db/: helpers.py  test_grants.py  test_migrations.py  test_schema_constraints.py  test_subject_seed.py
backend/tests/fixtures/: supabase_tokens.py
backend/tests/integration/: test_auth_wx_login.py  test_mistake_create_e2e.py  test_mistake_ingest.py  test_mistake_ingest_pdf.py  test_note_ingest.py  test_note_ingest_pdf.py  test_notes_e2e.py  test_rls_e2e.py  test_storage_signed_upload.py
backend/tests/schemas/: test_classify_schema.py
(+52 files in other folders)
