[project]
name = "mistake-note-ai-backend"
version = "0.1.0"
description = "FastAPI backend for mistake and note AI assistant MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "PyJWT[crypto]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = []
