[project]
name = "mistake-note-ai-backend"
version = "0.1.0"
description = "FastAPI backend for mistake and note AI assistant MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "PyJWT[crypto]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.32.0",
    "pypdf>=6.10.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "reportlab>=4.5.0",
    "respx>=0.23.1",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not manual_smoke'"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "manual_smoke: tests that use user-provided fixture files and are not run in CI",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = []
